# Lab_OOP

./: README.md
Lab_1/: CMakeLists.txt  main.cpp
Lab_1/include/: closest_pair_tonum.h
Lab_1/src/: closest_pair_tonum.cpp
Lab_1/test/: tests01.cpp
Lab_2/: CMakeLists.txt  main.cpp
Lab_2/.devcontainer/: Dockerfile  devcontainer.json
Lab_2/built/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  lab1.sln  lab1_exe.vcxproj  lab1_exe.vcxproj.filters  lab1_lib.vcxproj  lab1_lib.vcxproj.filters  tests.vcxproj  tests.vcxproj.filters
Lab_2/include/: Thirteen.hpp
Lab_2/src/: Thirteen.cpp
Lab_2/test/: tests01.cpp
Lab_3/: CMakeLists.txt  main.cpp
Lab_3/include/: Figure.h  Rectangle.h  Rhomb.h  Trapezoid.h
Lab_3/src/: Figure.cpp  Rectangle.cpp  Rhomb.cpp  Trapezoid.cpp
Lab_3/test/: tests01.cpp
Lab_4/: main.cpp
Lab_4/include/: Array.h  Figure.h  Point.h  Rectangle.h  Rhomb.h  Trapezoid.h
Lab_4/src/: Rectangle.cpp  Rhomb.cpp  Trapezoid.cpp
Lab_4/tests/: test01.cpp
Lab_5/: CMakeLists.txt  main.cpp
Lab_5/include/: dynamic_array.h  memory_resource.h
Lab_5/src/: dynamic_array.cpp  memory_resource.cpp
Lab_5/tests/: test01.cpp
Lab_6/: main.cpp
Lab_6/include/: belka.h  medved.h  npc.h  ork.h
Lab_6/src/: belka.cpp  medved.cpp  npc.cpp  ork.cpp
Lab_6/tests/: test01.cpp
Lab_7/: CMakeLists.txt  main.cpp
Lab_7/include/: bear.h  npc.h  orc.h  squirrel.h
(+27 files in other folders)
